--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						</ul>
 						<ul class="icons">
 							<li><a href="www.linkedin.com/in/najah-alhaj-3baa06334" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://najalhaj.github.io/portfolio/" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/najalhaj/portfolio" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -148,7 +148,7 @@
 								<h3>Social</h3>
 								<ul class="icons alt">
 									<li><a href="www.linkedin.com/in/najah-alhaj-3baa06334" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://github.com/najalhaj" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/najalhaj/portfolio" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
@@ -179,4 +179,5 @@
 
 	</body>
 </html>
+
 
