--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 					<div id="intro">
 						<h1>Najah Alhaj<br />
 						</h1>
-            					<!-- <h2>Market Research Analyst</h2> -->
             					<h2>Market Research Associate</h2>
 						<p>believing that data may be a powerful tool for building<br />
             societies and making the world a better place</p>
@@ -95,7 +94,7 @@
 										<h3>Statistical analysis - A/B Test</h3>
 									</header>
 							  		<figure>
-										<a class="image fit"><img src="../images/fb-vs-g-scatter.png" alt="A scatter plot showing the relationship between ad clicks and conversions for Facebook Ads vs. Google Ads" /></a>
+										<a class="image fit"><img src="images/fb-vs-g-scatter.png" alt="A scatter plot showing the relationship between ad clicks and conversions for Facebook Ads vs. Google Ads" /></a>
 							    		<figcaption>
 							    		</figcaption>
 							  		</figure>
@@ -115,7 +114,7 @@
 										<h3>Real-Time Insights on Public Opinion</h3>
 									</header>
 							  		<figure>
-										<a class="image fit"><img src="../images/Screenshot_poll_app.png" alt="Screenshot of Social Media Poll App" /></a>
+										<a class="image fit"><img src="images/Screenshot_poll_app.png" alt="Screenshot of Social Media Poll App" /></a>
 							    		<figcaption>
 							    		</figcaption>
 							  		</figure>
@@ -179,5 +178,6 @@
 
 	</body>
 </html>
+
 
 
